@@ -1,3 +1,8 @@
+2017-05-16  Marc Glisse  <marc.glisse@inria.fr>
+
+	* include/std/optional (_Optional_base::_M_get): Check precondition.
+	* testsuite/20_util/optional/cons/value_neg.cc: Update line numbers.
+
 2017-05-16  Jonathan Wakely  <jwakely@redhat.com>
 
 	* doc/xml/manual/appendix_contributing.xml: Link to test docs and
